# Arsenal-Ops-

./: .env  .env.example  .gitignore  .lighthouserc.json  .pre-commit-config.yaml  Justfile  MIGRATION_httponly_cookies.md  RBAC.md  README.md  REVIEW_RULES.md  WEEKLY_EMAIL_REPORT_SETUP.md  WORKFORCE_INTEGRATION_SETUP.md  WORKFORCE_QB_INTEGRATION_DESIGN.md  docker-compose.yml  render.yaml
backend/: .env  .env.test  Dockerfile  REVIEW_RULES.md  capabilities.py  create_admin.py  database.py  logging_config.py  main.py  mcp_server.py  migrate_add_calendar_time_blocks.py  migrate_add_last_assigned_at.py  migrate_add_logged_hours.py  migrate_add_perf_indexes.py  migrate_add_pulse_overrides.py  migrate_widen_activity_log_title.py  openapi.json  parser.py  productmind.db  pyproject.toml  requirements.txt  seed_project_board.py  test_capacity.py  test_capacity_endpoints.py  test_capacity_transfers.py
backend/middleware/: __init__.py  etag.py  perf.py
backend/models/: __init__.py  activity_log.py  applied_migration.py  architecture.py  comment.py  custom_restriction.py  developer.py  market_insight.py  milestone.py  persona.py  personal_task.py  project.py  project_category.py  project_favorite.py  project_file.py  project_goal.py  project_link.py  project_milestone.py  project_pulse_override.py  role.py  sprint.py  task.py  task_dependency.py  time_entry.py  user.py  user_story.py  work_item.py  work_item_assignment_history.py  workforce_client.py  workforce_integration.py
backend/routers/: __init__.py  admin.py  auth.py  comments.py  developers.py  overview.py  personal_tasks.py  prd_analysis.py  project_categories.py  projects.py  pulse.py  roadmap.py  time_blocks.py  workforce.py  workitems.py
backend/scripts/: audit_hierarchy.py  backfill_developers.py  dedupe_time_entries.py  export_openapi.py  recompute_epic_hours.py  run_workforce_sync.py  seed_admins.py  seed_calendar_demo.py  send_submit_reminder.py  send_weekly_report.py
backend/services/: __init__.py  architecture_generator.py  assignment_history_service.py  capacity_service.py  email_service.py  github_service.py  google_oauth_service.py  (+14 more)
(+552 files in other folders)
